feat: balance (#49)